tests/gator/cases/enforce-seccomp/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: PSPSeccompDefault
metadata:
  name: pod-enforce-seccomp
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "DaemonSet", "StatefulSet", "ReplicaSet"]
      - apiGroups: ["batch"]
        kinds: ["Job", "CronJob"]
  parameters:
    allowedProfiles:
      - RuntimeDefault
      - Localhost
    waiver:
      expiryAnnotation: guardrails.gatekeeper.dev/waive-until
      reasonAnnotation: guardrails.gatekeeper.dev/waive-reason
